--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Uploading zip to S3
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+#on:
+ # push:
+ #   branches: [ main ]
+ # workflow_dispatch:
 
 jobs:
   build:
