--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           aws-region: us-east-1
       - name: convert to zip
         run: |
-          zip test.zip TestAction/
+          zip -qq -r test.zip TestAction/
       - name: Deploy files to S3 bucket 
         run: |
           aws s3 sync ${{github.workspace}}/ s3://testbuckettodeletedata/test2/Action/ --exclude "*" --include "*.zip"
