--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,26 @@
-name: Uploading zip to S3
-
+name: Uploading zip to S3 ${{ github.event.inputs.file }}
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
+   workflow_dispatch:
+     inputs:
+       release_tag:
+         description: Enter tag name
+         required: true
+       release_summary:
+         description: Enter release name
+         required: true
+       release_description:
+         description: Enter Body for release 
+         required: true
+       file:
+            type: choice
+            description: Choose file/folder to deploy to Production & Gdrive
+            options:
+              - None
+              - PreProcess_Algo.exe
+              - Unit_Alg.exe
+              - ADA_Alg.exe
+              - CoreAlg.exe
+              - TEMPLATES
 jobs:
   build:
     runs-on: ubuntu-latest
