--- a/.github/workflows/deploytolambda.yml
+++ b/.github/workflows/deploytolambda.yml
@@ -35,7 +35,7 @@ jobs:
  #         zip vectraAutomation.zip /home/runner/work/vectra-automation/vectra-automation/vectra-automation-service/target/vectra-automation-service-0.0.1-SNAPSHOT-jar-with-dependencies.jar	    
       - name: Deploy files to S3 bucket 
         run: |
-          aws s3 cp /home/runner/work/vectra-automation/vectra-automation/vectra-automation-service/target/vectra-automation-service-0.0.1-SNAPSHOT-jar-with-dependencies.jar s3://vectra-lambdabuild-test/vectra/
+          aws s3 sync ${{github.workspace}}/ s3://testbuckettodeletedata/test2/Action/ --exclude "*" --include "*.jar"
       - name: Update Lambda function code
         run: |
-          aws lambda update-function-code --function-name Start_and_Stop_instances --s3-bucket vectra-lambdabuild-test --s3-key vectra/vectra-automation-service-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+          aws lambda update-function-code --function-name Start_and_Stop_instances --s3://testbuckettodeletedata/test2/Action/*.jar
