--- a/.github/workflows/deploytolambda.yml
+++ b/.github/workflows/deploytolambda.yml
@@ -1,8 +1,8 @@
 name: DEV_Deploylambda
 
-#on: [ push ]
-on:
-   workflow_dispatch:   
+on: [ push ]
+#on:
+#   workflow_dispatch:   
 #      inputs:
 #         access_key:
 #            description: Enter Access Key
